tests/invalid/teste_for_erro.ts
for let i: number = 0; i < 3; i = i + 1) { 
    console.log(i);
}

for (let i number = 0; i < 3; i = i + 1) {  
    console.log(i);
}

for (let i: number = 0; i <; i = i + 1) {    
    console.log(i);
}

for (let i: number = 0; i < 3; i = ) {       
    console.log(i);
}

for (let i: number = 0; i < 3; i = i + 1 {   
    console.log(i);
}
